--- a/interests.html
+++ b/interests.html
@@ -8,9 +8,9 @@
 </head>
 <body>
  <h1>My Interests</h1>   
- <a href="main.html" target="_blank">Resume</a>
+ <a href="index.html" target="_blank">Resume</a>
  <ol>
- <span>id="sports"<li>Winter Sports</li></span>
+ <p id="sports"><li>Winter Sports</li>
     <ul>
         <li>Skiing</li>
         <li>Ice Skating</li>
@@ -27,15 +27,7 @@
 <br>
 <img src="https://emilypost.com/client_media/images/Everyday_Etiquette_glade_optics_I_30st7mGAE_unsplash.jpg" alt="Skiing_Photo">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/O4hl_xBFjc8?si=ybQdSLXKGHtf8RDV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-<div class='tableauPlaceholder' id='viz1703050867781' 
-    style='position: relative'><noscript><a href='http:&#47;&#47;www.curvediscussion.com&#47;design-is-justification-mm44-bank-holidays&#47;?pk_campaign=tp&amp;pk_kwd=mm44'>
-    <img alt='BankHolidays ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ma&#47;MakeoverMonday-Week44-BankHolidays&#47;BankHolidays&#47;1_rss.png' 
-    style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
-    <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='MakeoverMonday-Week44-BankHolidays&#47;BankHolidays' />
-    <param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ma&#47;MakeoverMonday-Week44-BankHolidays&#47;BankHolidays&#47;1.png' /> 
-    <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' />
-    <param name='display_count' value='yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1703050867781');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='1000px';vizElement.style.height='1027px';                  
-      var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement); 
+<div class='tableauPlaceholder' id='viz1703130048059' style='position: relative'><noscript><a href='https:&#47;&#47;www.tableau.com&#47;'><img alt='D:CompareHills_Table ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Sk&#47;SkiHillViz_Join_600&#47;DCompareHills_Table&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='SkiHillViz_Join_600&#47;DCompareHills_Table' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Sk&#47;SkiHillViz_Join_600&#47;DCompareHills_Table&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1703130048059');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='600px';vizElement.style.height='713px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 <a href="#sports">Jump to Winter Sports</a>
 </script>
 
